Mon May 23 04:03:46 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c (ossl_asn1_initialize): Allow creation of
	Constructives with an explicit tag_class parameter without
	automatically setting tagging to :EXPLICIT. Fixes a bug when encoding
	infinite length primitive values.

Mon May 23 04:03:46 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c (ossl_asn1_cons_to_der): Add an additional
	EOC for infinite length Constructives that are supposed to be encoded
	with explicit tagging. Also tabify method correctly.

Mon May 23 03:44:39 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c (ossl_asn1data_to_der): Remove redundant
	flag tmp_cons.

Mon May 23 00:35:00 2001  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (dump_bignum, bigmul1_balance, big_split, biglsh_bang,
	  bigrsh_bang, big_split3, bigmul1_toom3, bigmul0): implement Toom3 (Toom-Cook)
	  multiplication.

	* include/ruby/defines.h: add format prefixes for BDIGIT and BDIGIT_DBL.

Sun May 22 23:24:02 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Instead of rb_intern use static symbols to
	improve performance.

Sun May 22 21:56:51 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Use OpenSSL constants V_ASN1_xxx instead of
	hardcoded numbers for initializing class_tag_map.

Sun May 22 21:29:29 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* include/ruby/defines.h (CASEFOLD_FILESYSTEM): Revert r30508. See #4255.
	  Now __APPLE__ is not CASEFOLD_FILESYSTEM again.

	* load.c (loaded_feature_path, rb_feature_p, load_lock): Revert r30508.
	  See #4255. Make $LOADED_FEATURES scanning case-sensitive again.

Sun May 22 18:59:27 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_asn1.c(ossl_asn1_default_tag): avoid using RCLASS_SUPER
	  to make it compilable. Plus, tabify and change variable definition style.
